# finwatch

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
agent/: package.json
agent/src/: index.ts  orchestrator.ts
docs/plans/: 2026-02-02-alpaca-integration-design.md  2026-02-02-finwatch-implementation-plan.md  2026-02-02-phase-0-foundation.md  2026-02-02-phase-1a-rust-backend.md  2026-02-02-phase-1b-node-agent.md  2026-02-02-phase-2a-data-ingestion.md  2026-02-02-phase-2b-memory-system.md  2026-02-02-phase-2c-react-frontend.md  2026-02-02-phase-3a-analysis-loop.md  2026-02-02-phase-3b-self-improve.md  2026-02-02-phase-4-verification.md  2026-02-03-backtesting-design.md  2026-02-03-live-data-e2e.md  2026-02-03-ui-redesign-plan.md  2026-02-03-ui-redesign.md  2026-02-04-backtest-pr-fixes.md  2026-02-04-backtesting-implementation.md  (+3 more)
shared/: package.json
shared/src/: agent.ts  (+9 more)
src/: App.tsx  index.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  bridge_pending.rs  db.rs  events.rs  jsonrpc.rs  keychain.rs  lib.rs  main.rs  migrations.rs  sidecar.rs  watcher.rs
src-tauri/src/commands/: agent.rs  anomalies.rs  assets.rs  backtest.rs  config.rs  credentials.rs  memory.rs  mod.rs  sources.rs
src-tauri/src/indicators/: atr.rs  bollinger.rs  macd.rs  mod.rs  rsi.rs
src-tauri/src/types/: agent.rs  anomaly.rs  backtest.rs  config.rs  data.rs  memory.rs  mod.rs  provider.rs
(+220 files in other folders)
